--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -19,7 +19,7 @@
     position: absolute;
     width: 300px;
     height: 30px;
-    right: 35px;
+    right: 120px;
     align-items: center;
     display: flex;
     flex-direction: column;
@@ -29,13 +29,20 @@
 #search-bar {
     position: relative;
     height: 30px;
-    width: 200px;
+    width: 200px;   
     border-radius: 5px;
     margin: 0 5px;
     right: 20px;
 }
 
 #search-button{
+    height: 30px;
+    width: 80px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#random-button{
     height: 30px;
     width: 80px;
     border-radius: 5px;
