--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,24 +1,53 @@
 
 #card-div{
-    position: relative;
-    background-color: #3c3e43;
-    border: 4px solid black;
-    width: 300px;
+    background-color: #0000007e;
+    width: 500px;
+    height: 400px;
     color: white;
     text-decoration: none;
     align-items: center;
     align-items:center;
     flex-direction: row;
+    display: flex;
+    align-items: center;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 15px;
+}
+
+#card-inner-div{
+    position: relative;
+    width: 300px;
+    height: 400px;
+}
+
+#detail-div{
+  
+    height: 400px;
+    width:200px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #858688;
+    border-radius: 10px;
+    position: relative;
+    margin-left: 15px;
+    box-shadow: 0px 10px 10px rgba(10, 10, 10, 0.777);
 }
 
 #card-button{
-
+    position: relative;
+    bottom: 10px;
+    position:relative;
     height: 40px;
+
+  
 }
 
 #card-h2{
     text-decoration:none;
     color: white;
+    cursor: pointer;
 
 }
 
@@ -28,12 +57,19 @@
 
 .material-symbols-outlined {
 cursor: pointer;
-  font-size: 40px;
+  font-size: 30px;
   margin-right: 20px;
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
-  'opsz' 24
+  'opsz' 24;
+}
+
+img{
+    width: 300px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px rgba(10, 10, 10, 0.777);
+ 
 }
 
