--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+  overflow: auto;
+  height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,4 +14,10 @@ code {
     monospace;
 }
 
-
+#root {
+  position: relative;
+  min-height: 100vh;
+  background: 
+    linear-gradient(to left, rgba(0, 0, 0, 0.656), rgba(0, 0, 0, 0.817) 100%, rgb(0, 0, 0) 100%, rgba(0, 0, 0, 0.837)), /* Degradado oscuro en los bordes */
+    url(src/img/galaxy_background.jpg) repeat-y center top; 
+}
