--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -13,6 +13,12 @@
     border-radius: 10px;
     padding: 20px;
     margin: 15px;
+    transition: transform 0.3s ease;
+}
+
+#card-div:hover {
+    transform: scale(1.1);
+    box-shadow: 0px 10px 10px 5px rgba(253, 253, 253, 0.034);
 }
 
 #card-inner-div{
@@ -28,7 +34,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #858688;
+    background-color: #595c61cd;
     border-radius: 10px;
     position: relative;
     margin-left: 15px;
@@ -48,7 +54,13 @@
     text-decoration:none;
     color: white;
     cursor: pointer;
+    transition: color 0.3s ease;
+    
 
+}
+
+#card-h2:hover{
+    color: rgb(255, 206, 28);
 }
 
 #card-link{
@@ -57,13 +69,17 @@
 
 .material-symbols-outlined {
 cursor: pointer;
-  font-size: 30px;
+  font-size: 40px;
   margin-right: 20px;
   font-variation-settings:
   'FILL' 0,
   'wght' 400,
   'GRAD' 0,
   'opsz' 24;
+}
+
+.material-symbols-outlined:hover{
+    color: rgb(174, 170, 170);
 }
 
 img{
