--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,49 +1,93 @@
-#div-navbar{
-    position: relative;
-
+#div-navbar {
+  position: relative;
 }
 
-#nav-navbar{
+#nav-navbar {
     position: relative;
-    background: linear-gradient(to bottom, black, rgb(68, 67, 67));
+    background: linear-gradient(
+        to bottom,
+        rgba(0, 0, 0, 0.962),
+        rgba(255, 255, 255, 0.139)
+    );
     width: 100%;
-    height: 60px;
+    height: 80px;
     margin: 0px;
     padding: 0px;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
-#div-Searchnavbar{
-    position: absolute;
-    width: 300px;
-    height: 30px;
-    right: 120px;
-    align-items: center;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+#div-link {
+  position: absolute;
+  height: 50px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+#div-Searchnavbar {
+  position: absolute;
+  width: 400px;
+  height: 50px;
+  right: 50px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 #search-bar {
+  position: relative;
+  height: 40px;
+  width: 200px;
+  border-radius: 5px;
+  right: 20px;
+}
+
+#search-button {
+  height: 30px;
+  width: 80px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#random-button {
+  height: 30px;
+  width: 80px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.link-button{
+    cursor: pointer;
+    width: 100px;
+    height: 40px;
+    border-radius: 8px;
+    margin: 0px 20px 0 0px;
+    border: 3px solid rgb(145, 144, 146);
+    font-size: 15px;
+    font-weight:500;
+    background: transparent;
+    color: white;
+    transition: 0.3s ease;
+    
+}
+
+.link-button:hover{
+    background-color: white;
+    color: black;
+    border: 3px solid rgb(36, 36, 36);
+    box-shadow: 0px 2px 2px 2px rgba(171, 171, 171, 0.1);
+}
+
+#title-form-nav{
     position: relative;
-    height: 30px;
-    width: 200px;   
-    border-radius: 5px;
-    margin: 0 5px;
-    right: 20px;
-}
-
-#search-button{
-    height: 30px;
-    width: 80px;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-#random-button{
-    height: 30px;
-    width: 80px;
-    border-radius: 5px;
-    cursor: pointer;
+    width: 180px;
+    height: 60px;
+    left: 600px;
+    background-color: transparent;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
 }
