--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 body {
   overflow: auto;
+  background-color: black;
   height: 100%;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
