--- a/src/index.css
+++ b/src/index.css
@@ -3,22 +3,29 @@ body {
   background-color: black;
   height: 100%;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  color: white;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
 #root {
   position: relative;
   min-height: 100vh;
-  background: 
-    linear-gradient(to left, rgba(0, 0, 0, 0.656), rgba(0, 0, 0, 0.817) 100%, rgb(0, 0, 0) 100%, rgba(0, 0, 0, 0.837)), /* Degradado oscuro en los bordes */
-    url(src/img/galaxy_background.jpg) repeat-y center top; 
+  background: linear-gradient(
+      to left,
+      rgba(0, 0, 0, 0.656),
+      rgba(0, 0, 0, 0.817) 100%,
+      rgb(0, 0, 0) 100%,
+      rgba(0, 0, 0, 0.837)
+    ),
+    /* Degradado oscuro en los bordes */ url(src/img/galaxy_background.jpg)
+      repeat-y center top;
 }
