--- a/src/components/Favorite/Favorite.css
+++ b/src/components/Favorite/Favorite.css
@@ -1,14 +1,114 @@
 #fav-div {
-    padding: 30px 60px;
+ 
+}
+
+#fav-select {
+  padding: 10px 0 0 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
+
+}
+
+#fav-title{
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  bottom: 20px;
+  right: 40px;
+}
+
+
+#cards-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+
+.wrapper_id {
+  position: relative;
+  width: 250px;
+  height: 30px;
+  background-color: transparent;
+  border: 2px solid rgb(251, 251, 251);
+  border-radius: 34px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  box-shadow: 2px 2px rgb(255, 255, 255);
+}
+
+.wrapper_gender {
+  position: relative;
+  width: 495px;
+  height: 30px;
+  background-color: transparent;
+  border: 2px solid rgb(251, 251, 251);
+  border-radius: 34px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  box-shadow: 2px 2px rgb(255, 255, 255);
+}
+
+.option {
+  width: 120px;
+  height: 25px;
+  position: relative;
+  top: 2px;
+  left: 2px;
+}
+
+.input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  left: 0;
+  top: 0;
+  appearance: none;
+  cursor: pointer;
+}
+
+.btn {
+  width: 100%;
+  height: 100%;
+  background-color: #111;
+  border-radius: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.span {
+  color: white;
+}
+
+.input:checked + .btn {
+  background-color: white;
+}
+
+.input:checked + .btn .span {
+  color: black;}
+
+  #fav-span{
+    text-decoration: none;
+    cursor:default;
   }
-  
-  #cards-div {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    padding: 10px;
-    box-sizing: border-box;
-    width: 100%;
+
+  #fav-span:hover{
+    color: white;
   }
+
