--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -5,9 +5,9 @@
 #nav-navbar {
     position: relative;
     background: linear-gradient(
-        to bottom,
-        rgba(0, 0, 0, 0.962),
-        rgba(255, 255, 255, 0.139)
+        to top,
+        rgba(0, 0, 0, 0.647),
+        rgba(255, 255, 255, 0.158)
     );
     width: 100%;
     height: 80px;
@@ -60,27 +60,35 @@
   border-radius: 5px;
   cursor: pointer;
 }
-
-.link-button{
-    cursor: pointer;
-    width: 100px;
-    height: 40px;
-    border-radius: 8px;
-    margin: 0px 20px 0 0px;
-    border: 3px solid rgb(145, 144, 146);
-    font-size: 15px;
-    font-weight:500;
-    background: transparent;
-    color: white;
-    transition: 0.3s ease;
-    
+.link-button {
+  cursor: pointer;
+  width: 100px;
+  height: 40px;
+  border-radius: 8px;
+  margin: 0px 20px 0 0px;
+  border: 3px solid white;
+  font-size: 15px;
+  font-weight: 500;
+  background: transparent;
+  color: white;
+  transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.link-button:hover{
-    background-color: white;
-    color: black;
-    border: 3px solid rgb(36, 36, 36);
-    box-shadow: 0px 2px 2px 2px rgba(171, 171, 171, 0.1);
+.link-button:hover {
+  background-color: white;
+  color: black;
+  border-color: rgb(36, 36, 36);
+}
+
+.link-button:active {
+  background-color: rgb(240, 240, 240);
+  color: black;
+  border-color: transparent;
+  box-shadow: 0px 2px 2px 2px rgba(171, 171, 171, 0.1);
+}
+
+.link-button:focus {
+  outline: none;
 }
 
 #title-form-nav{
