--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -36,6 +36,7 @@
   position: relative;
   margin-left: 15px;
   box-shadow: 0px 10px 10px rgba(10, 10, 10, 0.777);
+  
 }
 
 #card-button {
@@ -77,4 +78,91 @@ img {
   width: 300px;
   border-radius: 10px;
   box-shadow: 0px 10px 10px rgba(10, 10, 10, 0.777);
+}
+
+@media (max-width:450px){
+
+  #card-div {
+    background-color: #1b1a1a98;
+    width: 300px;
+    height: 380px;
+    color: white;
+    text-decoration: none;
+    align-items: center;
+    flex-direction: column;
+    display: flex;
+    border-radius: 10px;
+    box-shadow: 0px 2px 2px 2px rgba(253, 253, 253, 0.14);
+    transition: transform 0.3s ease;
+  }
+  
+  #card-div:hover {
+    transform: scale(1);
+    box-shadow: 5px 5px 5px 5px rgba(253, 253, 253, 0.054);
+  }
+  
+  #card-inner-div {
+    position: relative;
+    width:  300px;
+    height: 300px;
+  }
+  
+  #detail-div {
+    height: 180px;
+    width: 300px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center; /* Añadido para centrar verticalmente */
+    background-color: #595c61cd;
+    border-radius: 10px;
+    position: relative;
+    box-shadow: 0px 10px 10px rgba(10, 10, 10, 0.777);
+    border: 4px solid rgb(255, 224, 47);
+    margin-right: 15px;
+    font-size: 10px;
+    text-align: center; /* Centra horizontalmente el texto */
+    line-height: 1.5;
+    display: none;
+  }
+  
+  #card-button {
+    position: relative;
+    bottom: 10px;
+    position: relative;
+    height: 40px;
+  }
+  
+  #card-h2 {
+    text-decoration: none;
+    color: white;
+    cursor: pointer;
+    transition: color 0.3s ease;
+  }
+  
+  #card-h2:hover {
+    color: rgb(255, 206, 28);
+  }
+  
+  #card-link {
+    text-decoration: none;
+  }
+  
+  .material-symbols-outlined{
+    cursor: pointer;
+    text-decoration: none;
+    outline: none;
+    font-size: 40px;
+    margin-right: 20px;
+    font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
+  }
+  
+  .material-symbols-outlined:hover {
+    color: rgb(174, 170, 170);
+  }
+  
+  img {
+    width: 250px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 10px rgba(10, 10, 10, 0.777);
+  }
 }
