--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -12,3 +12,19 @@
     box-sizing: border-box;
     width: 100%;
   }
+
+  @media(max-width:450px){
+    #main-div {
+      padding: 30px 60px;
+    }
+    
+    #cards-div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      box-sizing: border-box;
+      width: 100%;
+    }
+  }
