--- a/src/components/Detail/Detail.css
+++ b/src/components/Detail/Detail.css
@@ -127,3 +127,140 @@
 #link{
     color: white;
 }
+
+@media (max-width:450px){
+
+    #div-detail{
+        position: relative;
+        color: white;
+        width: 92%;
+        height: 1000px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        border-radius: 25px;
+        background-color: #00000092;
+        box-shadow: 0px 5px 5px 2px rgba(253, 253, 253, 0.048);
+    }
+    
+    #inner-detail {
+        position: relative;
+        width: 88%;
+        height: 500px;
+        bottom: 0px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 20px;
+        background-color: #0c0c0c82;
+       
+    }
+    
+    #inner-detail-text {
+        position: relative;
+        width: 88%;
+        height: 500px;
+        padding: 10px;
+        margin: 0 0 0 30px;
+        right: 11px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        border-radius: 20px;
+        background-color: #333232a9;
+        word-wrap: break-word;
+        text-align: justify;
+        word-wrap: break-word; 
+
+    }
+    
+    #detail-img{
+        border-radius: 20px;
+        width: 300px;
+        height: 300px;
+    }
+    
+    #live{
+        font-size: 25px;
+        margin: 5px 0 0 15px;
+        padding: 0;
+        text-decoration: none;
+        cursor:default;
+    }
+    
+    #dead{
+        font-size: 25px;
+        margin: 5px 0 0 15px;
+        padding: 0;
+        text-decoration: none;
+        cursor:default;
+    }
+    
+    #unknown{
+        font-size: 25px;
+        margin: 5px 0 0 15px;
+        padding: 0;
+        text-decoration: none;
+        cursor:default;
+    }
+    
+    #Male{
+        font-size: 25px;
+        margin: 5px 0 0 15px;
+        padding: 0;
+        text-decoration: none;
+        cursor:default;
+    }
+    
+    #Female{
+        font-size: 25px;
+        margin: 5px 0 0 15px;
+        padding: 0;
+        text-decoration: none;
+        cursor:default;
+    }
+    
+    #info{
+        font-size: 40px;
+        margin: 5px 0 0 15px;
+        padding: 0;
+        text-decoration: none;
+        cursor:default;
+    }
+    
+    #info:hover{
+        color: white;
+    }
+    
+    #Female:hover{
+        color: white;
+    }
+    
+    #Male:hover{
+        color: white;
+    }
+    
+    #alive:hover{
+        color: white;
+    }
+    
+    #dead:hover{
+        color: white;
+    }
+    
+    #unkown:hover{
+        color: white;
+    }
+    
+    #link{
+        color: white;
+    }
+
+    #detail-span{
+        display: none;
+    }
+}
