--- a/src/components/Favorite/Favorite.css
+++ b/src/components/Favorite/Favorite.css
@@ -1,6 +1,4 @@
-#fav-div {
- 
-}
+
 
 #fav-select {
   padding: 10px 0 0 0;
@@ -44,7 +42,7 @@
   height: 30px;
   background-color: transparent;
   border: 2px solid rgb(251, 251, 251);
-  border-radius: 34px;
+  border-radius: 5px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -57,7 +55,7 @@
   height: 30px;
   background-color: transparent;
   border: 2px solid rgb(251, 251, 251);
-  border-radius: 34px;
+  border-radius: 5px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -86,7 +84,7 @@
   width: 100%;
   height: 100%;
   background-color: #111;
-  border-radius: 50px;
+  border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -112,3 +110,126 @@
     color: white;
   }
 
+  @media (max-width:950px){
+
+    #fav-select {
+      padding: 10px 0 0 0;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      height: 150px;
+      margin-bottom: 20px;
+     
+    }
+    
+    #fav-title{
+      position: relative;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-evenly;
+      align-items: center;
+      width: 150px;
+      height: 50px;
+      bottom: 20px;
+      right: 0px;
+     
+    }
+    
+    
+    #cards-div {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      padding: 0px;
+      box-sizing: border-box;
+      width: 100%;
+      
+    }
+    
+    
+    .wrapper_id {
+      position: relative;
+      width: 250px;
+      height: 30px;
+      background-color: transparent;
+      border: 2px solid rgb(251, 251, 251);
+      border-radius: 5px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      box-shadow: 2px 2px rgb(255, 255, 255);
+      right: 0px;
+      bottom: 10px;
+      justify-content: space-evenly;
+    }
+    
+    .wrapper_gender {
+      position: relative;
+      width: 400px;
+      height: 30px;
+      background-color: transparent;
+      border: 2px solid rgb(251, 251, 251);
+      border-radius: 5px;
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      box-shadow: 2px 2px rgb(255, 255, 255);
+      justify-content: space-evenly;
+    
+    }
+    
+    .option {
+      width: 120px;
+      height: 25px;
+      position: relative;
+      top: 2px;
+      left: 2px;
+    }
+    
+    .input {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      left: 0;
+      top: 0;
+      appearance: none;
+      cursor: pointer;
+    }
+    
+    .btn {
+      width: 90%;
+      height: 100%;
+      background-color: #111;
+      border-radius: 5px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    .span {
+      color: white;
+    }
+    
+    .input:checked + .btn {
+      background-color: white;
+    }
+    
+    .input:checked + .btn .span {
+      color: black;}
+    
+      #fav-span{
+        text-decoration: none;
+        cursor:default;
+      }
+    
+      #fav-span:hover{
+        color: white;
+      }
+    
+
+  }
