--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -77,3 +77,96 @@
 
   font-size: 20px;
 }
+
+@media (max-width:450px){
+
+  #div-principal {
+    position: relative;
+    padding: 0%;
+    margin: 0%;
+    background-color: rgb(0, 0, 0);
+    height: 100vh;
+    display: grid;
+    justify-content: center;
+    padding: 0 0 0 30px;
+    
+  }
+  
+  #form-div {
+    position: absolute;
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    left: 10px;
+    top: 230px;
+    width: 400px;
+    height: 350px;
+    border-radius: 15px;
+    color: white;
+    background-color:  #595c6123;
+    box-shadow: 2px 2px 2px 2px rgba(255, 255, 255, 0.116);
+    
+  }
+  
+  #img-form {
+    position: absolute;
+    top: 520px;
+    left: 40px;
+    width: 350px;
+    height: 400px;
+    background-color: transparent;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+  
+  }
+  
+  #title-form {
+    position: absolute;
+    width: 400px;
+    left: 10px;
+    background-color: transparent;
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0);
+    top: 3vh;
+   
+  }
+  
+  .div-label {
+    position: relative;
+    width: 400px;
+    height: 120px;
+    padding-top: 10px;
+  }
+  
+  #boton-form {
+    width: 350px;
+    height: 50px;
+    cursor: pointer;
+  
+    border-radius: 10px;
+    font-size: 20px;
+    border: 3px solid rgb(255, 255, 255);
+    background: transparent;
+    color: white;
+    transition: 0.3s ease;
+  
+  }
+  
+  #boton-form:hover {
+    background-color: white;
+    color: black;
+    border: 3px solid rgb(36, 36, 36);
+  }
+  
+  #input-form {
+    position: relative;
+    width: 350px;
+    height: 50px;
+  
+    border-radius: 10px;
+  }
+  
+  #label-form {
+    position: relative;
+  
+    font-size: 20px;
+  }
+}
