--- a/src/index.css
+++ b/src/index.css
@@ -29,3 +29,32 @@ code {
     /* Degradado oscuro en los bordes */ url(src/img/galaxy_background.jpg)
       repeat-y center top;
 }
+
+@media(max-width:450px){
+  body {
+    overflow: auto;
+    background-color: black;
+    height: 100%;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    color: white;
+  }
+
+  #root {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(
+        to left,
+        rgba(0, 0, 0, 0.656),
+        rgba(0, 0, 0, 0.817) 100%,
+        rgb(0, 0, 0) 100%,
+        rgba(0, 0, 0, 0.837)
+      ), url(src/img/galaxy_background.jpg) repeat-y center top;
+    background-size: cover;
+  }
+}
