--- a/client/src/components/NavBar/NavBar.css
+++ b/client/src/components/NavBar/NavBar.css
@@ -2,8 +2,8 @@
 #nav-navbar {
     background: linear-gradient(
         to top,
-        rgba(0, 0, 0, 0.647),
-        rgba(255, 255, 255, 0.158)
+        rgba(255, 255, 255, 0),
+        rgb(0, 0, 0)
     );
     width: 100%;
     height: 60px;
@@ -16,7 +16,7 @@
 
 #div-link {
   position: relative;
-  width: 500px;
+  width: 600px;
   height: 50px;
   display: flex;
   flex-direction:row;
