--- a/client/src/components/Undefined/Undefined.css
+++ b/client/src/components/Undefined/Undefined.css
@@ -20,6 +20,7 @@
     width: 725px;
     position: relative;
     right: 300px;
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0)
 }
 
 #nd-404{
@@ -28,6 +29,7 @@
     position: relative;
     bottom: 80px;
     animation: mirageAnimation 1s infinite;
+    box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0)
   
 }
 
@@ -49,6 +51,7 @@
     font-family: "Open Sans", sans-serif;
     font-family: "Palanquin", sans-serif;
     font-family: "Pixelify Sans", sans-serif;
+    
   }
   
   #rick-404{
@@ -56,6 +59,7 @@
       position: relative;
       right: 300px;
       display: none;
+      box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0);
   }
   
   #nd-404{
@@ -65,6 +69,7 @@
       bottom: 80px;
       animation: mirageAnimation 1s infinite;
       display: none;
+      box-shadow: 0px 0px 0px 0px rgba(255, 255, 255, 0)
   }
 
 }
