--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,7 +1,7 @@
 body {
   overflow: auto;
   background-color: black;
-  height: 100%;
+  min-width: 1350px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -9,6 +9,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   color: white;
+  background: linear-gradient(
+      to left,
+      rgba(149, 0, 213, 0.219),
+      rgba(149, 0, 213, 0.066) 100%,
+      rgb(149, 0, 213, 0.066) 100%,
+      rgb(149, 0, 213, 0.219)
+    ),
+    /* Degradado oscuro en los bordes */ url(/img/galaxy_background.jpg)
+      repeat-y center top;
 }
 
 code {
@@ -18,43 +27,21 @@ code {
 
 #root {
   position: relative;
-  min-height: 100vh;
-  background: linear-gradient(
-      to left,
-      rgba(0, 0, 0, 0.656),
-      rgba(0, 0, 0, 0.817) 100%,
-      rgb(0, 0, 0) 100%,
-      rgba(0, 0, 0, 0.837)
-    ),
-    /* Degradado oscuro en los bordes */ url(src/img/galaxy_background.jpg)
-      repeat-y center top;
+  height: 100%;
+  min-width: 1350px;
+
 }
 
-@media(max-width:450px){
-  body {
-    overflow: auto;
-    background-color: black;
-    height: 100%;
-    margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-      sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    color: white;
+@media (max-width: 1350px) and (max-height: 850px){
+
+  body{
+    height: 850px;
+  width: 1350px;
+ 
   }
 
-  #root {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    background: linear-gradient(
-        to left,
-        rgba(0, 0, 0, 0.656),
-        rgba(0, 0, 0, 0.817) 100%,
-        rgb(0, 0, 0) 100%,
-        rgba(0, 0, 0, 0.837)
-      ), url(src/img/galaxy_background.jpg) repeat-y center top;
-    background-size: cover;
-  }
+
+
+
+
 }
